Fixes #21499 - org/loc switchers are now visible

--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -52,7 +52,7 @@
 }
 
 .org-switcher {
-  @media (max-width: 768px) {
+  @media (max-width: 767px) {
     display: none !important;
   }
 }
